Agregada cola de mensajes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 
 
 
-add_executable(Concurrency main.cpp)
+add_executable(Concurrency main.cpp msg_queue.cpp msg_queue.h)
 TARGET_LINK_LIBRARIES( Concurrency pthread)
