--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.6.3)
 project(Concurrency)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 11)
 
 
 
-add_executable(Concurrency main.cpp)
+add_executable(Concurrency main.cpp timer.cpp timer.h)
 TARGET_LINK_LIBRARIES( Concurrency pthread)
